fix(PC-110): fix spesc text on mobile screens (no wrap)

--- a/src/modules/ProductDetalisPage/components/Description/Description.module.scss
+++ b/src/modules/ProductDetalisPage/components/Description/Description.module.scss
@@ -29,7 +29,7 @@
   display: flex;
   gap: 10px;
   justify-content: space-between;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .article {
